# litestar-clean-arch

./: app.py  database.db  pyproject.toml
src/: routes.py
src/domain/models/: user_model.py
src/domain/repositories/: user_repository.py
src/infra/contracts/: database_connection.py
src/infra/tortoise_orm/config/: tortoise_database_connection.py
src/infra/tortoise_orm/repositories/: user_repository_imp.py
src/presentation/controllers/: user_controller.py
src/presentation/schemas/: __init__.py  user_schema.py
